Refactor bodega model
